# lidarserv

./: .gitignore  Cargo.toml  LICENSE  Pipfile  README.md
evaluation/: Cargo.toml  default_settings.toml  eval-disk-speed-results-1.json  eval-disk-speed-results-5.json  eval-disk-speed-results-6.json  eval-disk-speed-results-7.json  eval-results-2.json  eval-results-5.json  eval-results-viz.py  example.toml  metrics-viz.py  test.toml  test_2023-08-14_1.json  test_2023-08-20_1.json  test_2023-08-21_1.json
evaluation/2022/: octree_optim_v1_2022-05-20_2.json  octree_optim_v1_2022-05-22_2.json  octree_reduced_v2_2022-05-19_2.json  octree_v1_2022-04-07_1.json  octree_v2_2022-04-12_1.json
evaluation/2023/2023-07-25_macbook_parameter_overview_v2/: macbook_parameter_overview_v3_2023-07-25_2.json
evaluation/2023/2023-07-29_comparison_input_file_speed/: test_2023-07-29_1.json
evaluation/2023/2023-08-02_query_overview/: query_overview_v5.toml  query_overview_v5_2023-08-21_1.json
evaluation/2023/2023-08-03_node_hierarchy_comparison/: node_hierarchy_comparison_2023-08-05_2.json
evaluation/2023/2023-08-20_insertion_speed_comparison/: insertion_speed_v1_2023-08-20_1.json
evaluation/2023/2023-09-14_bogus_point_comparison/: bogus_point_comparison_v1.toml
evaluation/2024/2023-12-14_parameter_overview/: parameter_overview_2023-12-14_1.json  parameter_overview_v2.toml
evaluation/2024/2024-02-01_insertion_speed/: insertion_speed_v1_2024-02-01_1.json
evaluation/2025/: eval-results-viz.py  overview.toml  overview_2024-11-14_1.json  pasture-new.toml  pasture-new_2024-11-14_1.json  pasture-new_2024-11-25_2.json
evaluation/2025-paper-real-time-visualisation-arbitrary-attributes/: draw-figures.py  pyproject.toml
evaluation/2025-paper-real-time-visualisation-arbitrary-attributes/figures/: average_querying_speed_ahn4_2024-12-12_2.txt  average_querying_speed_ahn4_2024-12-20_1.txt  average_querying_speed_ahn4_2024-12-26_1.txt  average_querying_speed_ahn4_2025-01-07_1.txt  average_querying_speed_kitti_2024-12-12_1.txt  average_querying_speed_kitti_2024-12-25_1.txt  average_querying_speed_kitti_2024-12-26_1.txt  average_querying_speed_kitti_2025-01-06_1.txt  average_querying_speed_kitti_2025-04-02_1.txt  average_querying_speed_lille_2025-01-15_6.txt  average_querying_speed_lille_2025-04-01_1.txt  average_querying_speed_lille_2025-04-05_1.txt  queries_ahn4_2024-12-12_2.tex  queries_ahn4_2024-12-20_1.tex  queries_kitti_2024-12-05_3.tex  queries_kitti_2024-12-12_1.tex  queries_kitti_2024-12-25_1.tex  queries_kitti_2024-12-26_1.tex  queries_kitti_2025-01-06_1.tex  queries_lille_2024-12-12_1.tex  queries_lille_2024-12-19_3.tex  queries_lille_2025-01-15_5.tex  queries_lille_2025-01-15_6.tex  queries_lille_2025-04-01_1.tex  queries_lille_2025-04-05_1.tex
evaluation/2025-paper-real-time-visualisation-arbitrary-attributes/measurements/: index_sizes.json
evaluation/2025-paper-real-time-visualisation-arbitrary-attributes/toml-files/: ahn4-attr-idx.toml  ahn4.toml  ahn4_latency.toml  kitti.toml  (+4 more)
evaluation/examples/: show_queries.rs
evaluation/results/: macbook_parameter_overview_v1.toml  macbook_parameter_overview_v1_2023-07-24_1.json  macbook_parameter_overview_v1_2023-07-24_3.json  macbook_parameter_overview_v2.toml  macbook_parameter_overview_v2_2023-07-25_1.json  macbook_parameter_overview_v3_2023-07-25_3.json  octree.toml  octree_2022-04-09_1.json  octree_2022-04-10_1.json  octree_optim_v1_2022-05-20_1.json  octree_optim_v1_2022-05-21_1.json  octree_optim_v1_2022-05-22_1.json  octree_optim_v1_2022-05-23_1.json  octree_reduced_v1.toml  octree_reduced_v1_2022-05-19_1.json  octree_reduced_v1_2022-05-19_2.json  octree_reduced_v1_2022-05-19_3.json  octree_reduced_v1_2022-05-19_5.json  octree_reduced_v2_2022-05-19_1.json  octree_reduced_v2_2022-05-20_1.json  octree_v1.toml  octree_v2.toml  octree_v3.toml  octree_v3_2022-04-29_1.json  octree_v3_2022-04-30_1.json  schnelltest_v1.toml  sensorpos_parallelisation.toml  sensorpos_parallelisation_2022-04-11_1.json
evaluation/results_2022/: octree_reduced_v1_2022-05-19_4.json  octree_reduced_v2.toml  octree_v3_2022-04-14_1.json
evaluation/results_2024/: eval-results-viz.py
evaluation/results_old/: octree_optim_v1.toml  octree_reduced_v1_2022-05-19_6.json  octree_v1_2022-04-08_1.json
evaluation/src/: config.rs  indexes.rs  insertion_rate.rs  latency.rs  lib.rs  main.rs  point.rs  queries.rs  query_performance.rs  settings.rs  thermal_throttle.rs
experiments/: Cargo.toml  point_distance_hist.out.txt  point_distance_hist_diagram.py
experiments/examples/: las_encode_test.rs  point_distance_hist.rs  preconvdbg.rs  raw_las_rw.rs  writefile.rs
file-replay/: Cargo.toml
file-replay/src/: iter_points.rs  lib.rs  main.rs
input-ros/: .env  Cargo.toml
input-ros/src/: cli.rs  main.rs  ros.rs
lidarserv-common/: Cargo.toml
lidarserv-common/src/: f64_utils.rs  lib.rs  trace_utils.rs
lidarserv-evaluation/: Cargo.toml
lidarserv-evaluation/src/: cli.rs  converter.rs  defaults.toml  insertion_rate.rs  latency.rs  main.rs  query_performance.rs  settings.rs
lidarserv-input-file/: Cargo.toml
lidarserv-input-file/src/: cli.rs  lib.rs  main.rs
lidarserv-input-ros/: Cargo.toml  build.rs
lidarserv-input-ros/ros1_common_msgs/: COPYRIGHT_NOTICE.md
lidarserv-input-ros/ros1_tf2_msgs/: COPYRIGHT_NOTICE.md
lidarserv-input-ros/src/: cli.rs  lidarserv.rs  main.rs  processing.rs  status.rs  transform_tree.rs
lidarserv-query/: Cargo.toml
lidarserv-query/src/: cli.rs  main.rs
lidarserv-server/: Cargo.toml
lidarserv-server/src/: cli.rs  lib.rs  main.rs
lidarserv-viewer/: Cargo.toml
lidarserv-viewer/src/: cli.rs  main.rs
output-file-query/: Cargo.toml
output-file-query/src/: cli.rs  main.rs
pcd-replay/: Cargo.toml
pcd-replay/src/: cli.rs  main.rs  pcd_reader.rs
point-cloud-viewer/: Cargo.toml  README.md
point-cloud-viewer/examples/: 01_init.rs  02_window_management.rs  03_simple_point_clouds.rs  04_point_attributes.rs  05_camera_control.rs  full_example_show_laz_file.rs  getting_started.rs  utils.rs
point-cloud-viewer/src/: lib.rs
(+555 files in other folders)
