
[workspace]
members = ["lidarserv-server", "lidarserv-common", "lidarserv-input-file", "lidarserv-query", "lidarserv-viewer", "lidarserv-evaluation"]
resolver = "2"

[workspace.dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
pasture-core = {git = "https://github.com/Mortano/pasture.git", rev = "b575898a6baa861ca84a5ef2629b2e687bdf2d45", features = ["serde"]}
pasture-derive = {git = "https://github.com/Mortano/pasture.git", rev = "b575898a6baa861ca84a5ef2629b2e687bdf2d45"}
pasture-io = {git = "https://github.com/Mortano/pasture.git", rev = "b575898a6baa861ca84a5ef2629b2e687bdf2d45"}

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3