
[workspace]
members = ["lidarserv-server", "lidarserv-common", "lidarserv-input-file", "lidarserv-query", "lidarserv-viewer", "lidarserv-evaluation", "lidarserv-input-ros"]
resolver = "2"

[workspace.dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
pasture-core = {git = "https://github.com/Mortano/pasture.git", rev = "a07cb20fc786580efc29d7fb97b6cbf496092453", features = ["serde"]}
pasture-derive = {git = "https://github.com/Mortano/pasture.git", rev = "a07cb20fc786580efc29d7fb97b6cbf496092453"}
pasture-io = {git = "https://github.com/Mortano/pasture.git", rev = "a07cb20fc786580efc29d7fb97b6cbf496092453"}

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
