
[workspace]
members = ["lidarserv-server", "lidarserv-common", "lidarserv-input-file", "lidarserv-query", "lidarserv-viewer", "lidarserv-evaluation", "lidarserv-input-ros"]
resolver = "2"

[workspace.dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
pasture-core = {git = "https://github.com/igd-geo/pasture.git", rev = "83704b589f6e405d0038198e9784bfb4ca2390e7", features = ["serde"]}
pasture-derive = {git = "https://github.com/igd-geo/pasture.git", rev = "83704b589f6e405d0038198e9784bfb4ca2390e7"}
pasture-io = {git = "https://github.com/igd-geo/pasture.git", rev = "83704b589f6e405d0038198e9784bfb4ca2390e7"}

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
