[package]
name = "evaluation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
dotenv = "0.15.0"
velodyne-csv-replay = { path = "../velodyne-csv-replay" }
lidarserv-common = { path = "../lidarserv-common" }
lidarserv-server = { path = "../lidarserv-server" }
nalgebra = "0.23.2"
pretty_env_logger = "0.4.0"
log = "0.4.14"
serde = { version = "1.0.130", features=["derive"]}
serde_json = "1.0.72"
toml = "0.5.8"
crossbeam-channel = "0.5.1"
default-functions-derive = { path = "../default-functions-derive" }
time = "0.3.9"

[target.'cfg(target_os = "linux")'.dependencies]
libmedium = "0.6.0"
