[package]
name = "experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lidarserv-common = { path = "../lidarserv-common" }
velodyne-csv-replay = { path = "../velodyne-csv-replay" }
las = "0.7.5"
laz = "0.6.0"
