[package]
name = "experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lidarserv-common = { path = "../lidarserv-common" }
lidarserv-server = { path = "../lidarserv-server" }
input-file-replay = { path = "../input-file-replay" }
las = "0.7.5"
laz = "0.6.0"
anyhow = "1.0.52"