[package]
name = "lidarserv-common"
version = "2.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra.workspace = true
num-traits = "0.2.14"
thiserror = "2.0"
tracy-client = { version = "0.17.3, <0.17.5", default-features=false }  # current version 0.17.5 is broken. I made a PR with a fix. Currently waiting for it to be merged.
crossbeam-channel = "0.5.1"
serde = { version = "1.0.126", features = ["derive"] }
ciborium = "0.2.1"
log = "0.4.14"
serde_json = "1.0.72"
bincode = "2.0.1"
pasture-core.workspace = true
anyhow = "1.0.83"
byteorder = "1.5.0"
lz4 = "1.24.0"
bytemuck = "1.16.0"

[features]
trace = [
    "tracy-client/enable",
    "tracy-client/system-tracing", 
    "tracy-client/context-switch-tracing", 
    "tracy-client/sampling", 
    "tracy-client/code-transfer",
    "tracy-client/broadcast", 
    "tracy-client/callstack-inlines"
]

[dev-dependencies]
pasture-derive.workspace = true
