[package]
name = "lidarserv-evaluation"
version = "2.0.0"
edition = "2024"

[dependencies]
fs_extra = "1.2.0"
human-panic = "2.0"
clap = {version = "4.5", features = ["derive"]}
log = "0.4"
simple_logger = {version = "5.0", features = ["stderr"]}
anyhow = "1.0"
nalgebra.workspace = true
pasture-core.workspace = true
pasture-derive.workspace = true
pasture-io.workspace = true
serde = { version = "1.0", features=["derive"]}
serde_json = "1.0"
toml = "0.8"
lidarserv-input-file = { path = "../lidarserv-input-file" }
lidarserv-common = { path = "../lidarserv-common" }
lidarserv-server = { path = "../lidarserv-server" }
git-version = "0.3"
chrono = "0.4"
gethostname = "1.0.1"
indicatif = "0.17"
indicatif-log-bridge = "0.2"
indexmap = { version = "2.6", features = ["serde"]}
itertools = "0.14.0"
rand = "0.9.0"
crossbeam-channel = "0.5"