[package]
name = "lidarserv-input-file"
version = "0.1.0"
edition = "2021"

[dependencies]
human-panic = "2.0"
clap = {version = "4.5", features = ["derive"]}
log = "0.4.14"
simple_logger = "5.0"
pasture-core.workspace = true
pasture-io.workspace = true
anyhow = "1.0"
tokio = { version = "1.28", features = ["full"] }
lidarserv-server = { path = "../lidarserv-server" }
lidarserv-common = { path = "../lidarserv-common" }
bytemuck = "1.17"
thiserror = "1.0"
tempfile = "3.12"
nalgebra.workspace = true