[package]
name = "lidarserv-query"
version = "2.0.0"
edition = "2024"

[dependencies]
human-panic = "2.0"
clap = {version = "4.5", features = ["derive"]}
log = "0.4.14"
simple_logger = {version = "5.0", features = ["stderr"]}
pasture-core.workspace = true
pasture-io.workspace = true
anyhow = "1.0"
tokio = { version = "1.28", features = ["full"] }
lidarserv-server.path = "../lidarserv-server"
lidarserv-common.path = "../lidarserv-common"
serde_json = "1.0"