[package]
name = "lidarserv-server"
version = "0.1.0"
edition = "2021"
default-run = "lidarserv-server"
authors = ["Tobias Dorra <mail@tobiasdorra.de>"]

[dependencies]
nalgebra = { version = "0.32.5", features = ["serde-serialize"] }
clap = {version = "4.5", features = ["derive"]}
log = "0.4.14"
simple_logger = "4.1.0"
human-panic = "1.0.3"
anyhow = "1.0.44"
lidarserv-common = { path = "../lidarserv-common" }
tokio = { version = "1.28.0", features = ["full"] }
bytes = "1.1.0"
thiserror = "1.0.30"
serde = { version = "1.0.126", features = ["derive", "rc"] }
serde_json = "1.0.64"
ciborium = "0.2.1"
crossbeam-channel = "0.5.1"
pasture-core = {git = "https://github.com/Mortano/pasture.git", rev = "1be6f0dda8c0dbcebf2d24db9ae4c01cee74767d", features = ["serde"]}
pasture-io = {git = "https://github.com/Mortano/pasture.git", rev = "1be6f0dda8c0dbcebf2d24db9ae4c01cee74767d"}
pest = "2.7.11"
pest_derive = {version = "2.7.11", features = ["grammar-extras"]}
dialoguer = "0.11"