[package]
name = "lidarserv-server"
version = "2.0.0"
edition = "2024"
default-run = "lidarserv-server"
authors = ["Tobias Dorra <mail@tobiasdorra.de>"]

[dependencies]
nalgebra.workspace = true
pasture-core.workspace = true
pasture-io.workspace = true
clap = {version = "4.5", features = ["derive"]}
log = "0.4.14"
simple_logger = "5.0"
human-panic = "2.0"
anyhow = "1.0.44"
lidarserv-common = { path = "../lidarserv-common" }
tokio = { version = "1.28.0", features = ["full"] }
bytes = "1.1.0"
thiserror = "2.0"
serde = { version = "1.0.126", features = ["derive", "rc"] }
serde_json = "1.0.64"
ciborium = "0.2.1"
crossbeam-channel = "0.5.1"
pest = "2.7.11"
pest_derive = {version = "2.7.11", features = ["grammar-extras"]}
dialoguer = "0.11"