[package]
name = "lidarserv-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3.23", features = ["paw", "wrap_help", "color", "suggestions"]}
paw = "1.0.0"
anyhow = "1.0.44"
lidarserv-server = { path = "../lidarserv-server" }
tokio = { version = "1.12.0", features = ["full"] }
log = "0.4.14"
simple_logger = "2.1.0"
point-cloud-viewer = { path = "../point-cloud-viewer" }
pasture-core = "0.2.0"
pasture-derive = "0.2.0"
crossbeam-channel = "0.5.1"