[package]
name = "lidarserv-viewer"
version = "2.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3.23", features = ["paw", "wrap_help", "color", "suggestions"]}
paw = "1.0.0"
anyhow = "1.0.44"
lidarserv-server = { path = "../lidarserv-server" }
lidarserv-common.path = "../lidarserv-common"
tokio = { version = "1.28.0", features = ["full"] }
log = "0.4.14"
simple_logger = "5.0"
point-cloud-viewer = { path = "../point-cloud-viewer" }
pasture-core.workspace = true
pasture-derive.workspace = true
nalgebra.workspace = true
crossbeam-channel = "0.5.1"
bytemuck = "1.16"
serde_json = "1.0.133"
toml = "0.8.19"