[package]
name = "output-file-query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3.23", features = ["paw", "wrap_help", "color", "suggestions"]}
paw = "1.0.0"
lidarserv-server = { path = "../lidarserv-server" }
lidarserv-common = { path = "../lidarserv-common" }
serde = { version = "1.0.130", features=["derive"]}
default-functions-derive = { path = "../default-functions-derive" }
serde_json = "1.0.72"
tokio = { version = "1.28.0", features = ["full"] }
log = "0.4.14"
simple_logger = "4.1.0"
pasture-core = "0.2.0"
pasture-derive = "0.2.0"
crossbeam-channel = "0.5.1"
futures = "0.3"
las = { version = "0.7.5", features = ["laz"] }