[package]
name = "pcd-replay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
thiserror = "1.0.31"
lidarserv-server = { path = "../lidarserv-server" }
file-locker = { version = "1.1.1", optional = true }
crossbeam-utils = "0.8.8"

[features]
default = ["file-lock"]
file-lock = ["file-locker"]
