[package]
name = "pcd-replay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
thiserror = "1.0.31"
lidarserv-server = { path = "../lidarserv-server" }
file-locker = { version = "1.1.1", optional = true }
clap = { version = "3.1.15", features=["wrap_help", "unicode", "derive", "color", "suggestions"] }
log = "0.4.17"
simple_logger = "2.1.0"
inotify = "0.10.0"
crossbeam-channel = "0.5.4"
tokio = { version = "1.28.0", features = ["full"] }
libc = "0.2.125"

[features]
default = ["file-lock"]
file-lock = ["file-locker"]
backtrace = ["anyhow/backtrace"]
