[package]
name = "point-cloud-viewer"
version = "0.1.0"
authors = ["Tobias Dorra <public.tobias@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pasture-core = "0.2.0"
log = "0.4.14"
ouroboros = "0.9.3"
derivative = "2.2.0"
crossbeam-channel = "0.5.1"
glium = "0.30.2"

[dev-dependencies]
pasture-io = "0.2.0"
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
pasture-derive = "0.2.0"
las = "0.7.4"
rand = "0.8.5"