[package]
name = "point-cloud-viewer"
version = "2.0.0"
authors = ["Tobias Dorra <public.tobias@outlook.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pasture-core.workspace = true
log = "0.4.14"
ouroboros = "0.18.5"
crossbeam-channel = "0.5.1"
glium = "0.32"

[dev-dependencies]
pasture-io.workspace = true
pasture-derive.workspace = true
dotenvy = "0.15.0"
pretty_env_logger = "0.5.0"
las = "0.9.3"
rand = "0.9.0"
bytemuck = "1.16.0"